2008-03-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/math/vector3.h, include/openbabel/base.h,
	include/openbabel/residue.h: Fixes for compiling with GCC
	-pedantic flag, thanks to Daniel Leidert.

	* tests/* : New tests for UFF, Ghemical and MMFF94 unit
	tests. Compares energies and validates gradients. Still appear to
	be some small gradient errors (although these may be due to
	numerical instability.)

	* src/forcefields/forcefield*.cpp (ValidateGradients): Return
	false when gradient errors are > 5.0% anywhere along the line.

2008-03-03  Noel O'Boyle <baoilleach@gmail.com>
	
	* tests/Makefile.am, files/3d.head.2.cml, tests/cmlreadfile.cpp,
	test/wrapper.sh: Add tests for CML scripting support

2008-03-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp: Ensure files match .so exactly. Prevents
	errors when looking for .so.dSYM files.

	* src/formats/MCDLformat.cpp: Fix GCC compile error.

	* src/formats/Makefile.am, src/formats/Makefile.in: Build rsmi and
	MCDL formats.

	* src/config.h.in: Regenerate for HAVE_BOOST symbol.

	* src/forcefields/forcefielduff.*: Fix angular
	gradients. Previous implementation mis-read paper for force
	constant.

	* tools/obminimize.cpp: Validate gradients before starting
	minimize. Useful for debugging force fields.

2008-03-02  Noel O'Boyle <baoilleach@gmail.com>
	
	* configure.in: Only use BOOST for shared_pointer if the GCC4.x
	implementation is not available.

2008-03-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/perl: Add dependency checking for libopenbabel. This
	prevents people trying to run automated CPAN tests without the
	library.

2008-03-01  Noel O'Boyle <baoilleach@gmail.com>
	
	* acinclude.m4: Set "have_boost" to "yes" so I can test it in
	configure.in
	* configure.in: Set Automake variable HAVE_SHARED_POINTER if the user
	has either of Boost or tr1/memory (gcc4.x)
	If "have_boost" is "yes" then set both the Automake variable